[package]
name = "substrate-runtime-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { version = "3.6.5", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

[workspace]
resolver = "2"
members = [
    "kitchensink",
    "kusama",
    "solochain",
    "asset-hub-kusama",
]