[package]
name = "asset-hub-kusama-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "0.8", default-features = false }
substrate-runtime-fuzzer = { path = ".." }

asset-hub-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.1.0", default-features = false }

parachains-common = { default-features = false , version = "4.0.0" }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }

frame-support = { default-features = false, version = "25.0.0" }
frame-system = { default-features = false, version = "25.0.0" }

sp-runtime = { default-features = false, version = "28.0.0" }
sp-state-machine = { default-features = false, version = "0.32.0" }
sp-consensus-aura = { default-features = false, version = "0.29.0" }

pallet-timestamp = { default-features = false, version = "24.0.0" }
pallet-balances = { default-features = false, version = "25.0.0" }

cumulus-primitives-core = { default-features = false , version = "0.4.0" }
cumulus-primitives-parachain-inherent = { default-features = false , version = "0.4.0" }
cumulus-pallet-parachain-system = { default-features = false, features = ["parameterized-consensus-hook",] , version = "0.4.0" }
cumulus-test-relay-sproof-builder = { default-features = false , version = "0.4.0" }

[features]
default = ["std", "try-runtime"]
std = [
    "asset-hub-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"sp-consensus-aura/std",
]
try-runtime = [
    "asset-hub-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]
