[package]
name = "asset-hub-kusama-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "1.0.2", default-features = false }

asset-hub-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", rev = "2fe6f56", default-features = false }

parachains-common = { default-features = false , version = "8.0.0" }

codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive", "max-encoded-len"] }

frame-support = { default-features = false, version = "29.0.2" }
frame-system = { default-features = false, version = "29.0.0" }

sp-runtime = { default-features = false, version = "32.0.0" }
sp-state-machine = { default-features = false, version = "0.36.0" }
sp-consensus-aura = { default-features = false, version = "0.33.0" }

pallet-timestamp = { default-features = false, version = "28.0.0" }
pallet-balances = { default-features = false, version = "29.0.1" }

cumulus-primitives-core = { default-features = false , version = "0.8.0" }
cumulus-primitives-parachain-inherent = { default-features = false , version = "0.8.0" }
cumulus-pallet-parachain-system = { default-features = false, features = ["parameterized-consensus-hook",] , version = "0.8.1" }
cumulus-test-relay-sproof-builder = { default-features = false , version = "0.8.0" }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "asset-hub-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"sp-consensus-aura/std",
]
try-runtime = [
    "asset-hub-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]
