[package]
name = "call-codec"
version = "0.1.0"
edition = "2024"

[dependencies]
ziggy = { version = "1.3.5", default-features = false }

# kitchensink-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509", default-features = false }
# polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.2", default-features = false }
staging-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.2", default-features = false }

codec = { version = "3.7.5", features = ["derive"], default-features = false, package = "parity-scale-codec" }
hex = "0.4.3"

[features]
default = ["std"]
fuzzing = []
std = [
    # "kitchensink-runtime/std",
    # "polkadot-runtime/std",
    "staging-kusama-runtime/std",
	"codec/std",
]
