[package]
name = "kitchensink-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
ziggy = { version = "0.8", default-features = false }

kitchensink-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }

codec = { version = "3.6.1", features = ["derive"], default-features = false, package = "parity-scale-codec" }

node-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }

pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-society = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-lottery = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-remark = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-transaction-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.3.0", default-features = false }

[features]
default = ["std", "try-runtime"]
std = [
    "kitchensink-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"sp-state-machine/std",
]
try-runtime = [
    "kitchensink-runtime/try-runtime",
	"frame-support/try-runtime",
	"pallet-timestamp/try-runtime",
]
