[package]
name = "kusama-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "0.8", default-features = false }

staging-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.2.1", default-features = false }
staging-xcm = { default-features = false , version = "8.0.1" }

kusama-runtime-constants = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.2.1", default-features = false }

polkadot-primitives = { version = "8.0.1", default-features = false }
polkadot-runtime-parachains = { version = "8.0.1", default-features = false }

codec = { version = "3.6.9", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

frame-support = { default-features = false , version = "29.0.2" }
frame-system = { default-features = false , version = "29.0.0" }

sp-application-crypto = { default-features = false , version = "31.0.0" }
sp-runtime = { default-features = false , version = "32.0.0" }
sp-state-machine = { default-features = false , version = "0.36.0" }
sp-consensus-babe = { default-features = false , version = "0.33.0" }
sp-consensus-beefy = { default-features = false , version = "14.0.0" }
sp-authority-discovery = { default-features = false , version = "27.0.0" }

pallet-balances = { default-features = false , version = "29.0.1" }
pallet-grandpa = { default-features = false , version = "29.0.0" }
pallet-society = { default-features = false, version = "29.0.0" }
pallet-utility = { default-features = false , version = "29.0.0" }
pallet-multisig = { default-features = false , version = "29.0.0" }
pallet-proxy = { default-features = false , version = "29.0.0" }
pallet-identity = { default-features = false , version = "29.0.0" }
pallet-bounties = { default-features = false , version = "28.0.0" }
pallet-staking = { default-features = false , version = "29.0.2" }
pallet-timestamp = { default-features = false , version = "28.0.0" }
pallet-xcm = { default-features = false , version = "8.0.4" }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "staging-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-grandpa/std",
	"pallet-balances/std",
	"pallet-staking/std",
	"sp-consensus-babe/std",
]
try-runtime = [
    "staging-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]
