[package]
name = "node-template-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
ziggy = { version = "0.6.0", default-features = false }

node-template-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

codec = { version = "3.4.0", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

[features]
default = ["std", "try-runtime"]
std = [
    "node-template-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"sp-state-machine/std",
	"sp-consensus-aura/std",
]
try-runtime = [
    "node-template-runtime/try-runtime",
	"frame-support/try-runtime",
	"pallet-timestamp/try-runtime",
]
