[package]
name = "solochain-template-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "0.8", default-features = false }

solochain-template-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }

codec = { version = "3.6.9", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }

pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }

[features]
default = ["std", "try-runtime"]
std = [
    "solochain-template-runtime/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"sp-consensus-aura/std",
]
try-runtime = [
    "solochain-template-runtime/try-runtime",
	"frame-support/try-runtime",
	"pallet-timestamp/try-runtime",
]
