[package]
name = "statemine-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
ziggy = { version = "0.7", default-features = false }

asset-hub-kusama-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }

parachains-common = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }

codec = { version = "3.6.1", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }

pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }

cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
cumulus-pallet-parachain-system= { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false }

[features]
default = ["std", "try-runtime"]
std = [
    "asset-hub-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-try-runtime/std",
	"pallet-timestamp/std",
	"pallet-grandpa/std",
	"sp-state-machine/std",
	"sp-consensus-aura/std",
]
try-runtime = [
    "asset-hub-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]
