[package]
name = "sp-fuzzing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp-core = { version = ">=34.0.0", default-features = false }
sp-externalities = { version = ">=0.29.0", default-features = false }
codec = { version = ">=3.6.0", default-features = false, package = "parity-scale-codec" }

[features]
default = ["std"]
std = ["sp-core/std", "sp-externalities/std", "codec/std"]
