[package]
name = "sp-fuzzing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp-core-templates = { package = "sp-core", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false, optional = true }
sp-externalities-templates = { package = "sp-externalities", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false, optional = true }
sp-core-runtimes = { package = "sp-core", version = "39.0.0", default-features = false, optional = true }
sp-externalities-runtimes = { package = "sp-externalities", version = "0.31.0", default-features = false, optional = true }
codec = { version = ">=3.7.5", default-features = false, package = "parity-scale-codec" }
rustc-hash = { version = "2", default-features = false, features = ["std"] }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more", "raw-entry"] }

[features]
default = ["std", "templates"]
std = ["sp-core-templates?/std", "sp-externalities-templates?/std", "sp-core-runtimes?/std", "sp-externalities-runtimes?/std", "codec/std"]
templates = ["sp-core-templates", "sp-externalities-templates"]
runtimes = ["sp-core-runtimes", "sp-externalities-runtimes"]
